--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - docker run docker-test npm run test -- --coverage
 
 deploy: 
-  provider: elastickbeanstalk
+  provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker-test"
   env: "DockerTest-env"
